added blogs
