# src/docs/swagger.json
@@ -4,10 +4,152 @@
         "description": "Документация к API.",
         "title": "Gangchi API",
         "contact": {},
-        "version": "0.1"
+        "version": "0.2"
     },
     "basePath": "/",
     "paths": {
+        "/api/blog/categories": {
+            "get": {
+                "description": "Возвращает все категории блога с переводом",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Блог"
+                ],
+                "summary": "Получить список категорий",
+                "operationId": "get_blog_categories",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "ru",
+                        "description": "Язык: ru, en, kk, zh",
+                        "name": "lang",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.BlogCategory"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/blog/posts": {
+            "get": {
+                "description": "Возвращает список статей с пагинацией, фильтрацией по категориям и переводом",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Блог"
+                ],
+                "summary": "Получить список статей",
+                "operationId": "get_blog_posts",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Страница",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "На странице",
+                        "name": "perPage",
+                        "in": "query"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        },
+                        "collectionFormat": "multi",
+                        "description": "Слаги категорий (можно несколько)",
+                        "name": "category",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "default": "ru",
+                        "description": "Язык: ru, en, kk, zh",
+                        "name": "lang",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.BlogPostsResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/blog/posts/{slug}": {
+            "get": {
+                "description": "Возвращает полную статью с тегами, переводом и SEO",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Блог"
+                ],
+                "summary": "Получить статью по слагy",
+                "operationId": "get_blog_post_by_slug",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Слаг статьи",
+                        "name": "slug",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "ru",
+                        "description": "Язык: ru, en, kk, zh",
+                        "name": "lang",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.BlogPostResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/loaders/getall": {
             "get": {
                 "description": "Отправляет всю таблицу с данными о каждом погрузчике",
@@ -142,6 +284,149 @@
         }
     },
     "definitions": {
+        "models.BlogAuthor": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.BlogCategory": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "description": "заполняется переводом",
+                    "type": "string"
+                },
+                "slug": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.BlogPostDetail": {
+            "type": "object",
+            "properties": {
+                "author": {
+                    "$ref": "#/definitions/models.BlogAuthor"
+                },
+                "category": {
+                    "$ref": "#/definitions/models.BlogCategory"
+                },
+                "content": {
+                    "type": "string"
+                },
+                "coverImage": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "publishedAt": {
+                    "type": "string"
+                },
+                "seo": {
+                    "$ref": "#/definitions/models.BlogSEO"
+                },
+                "slug": {
+                    "type": "string"
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.BlogTag"
+                    }
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.BlogPostListItem": {
+            "type": "object",
+            "properties": {
+                "author": {
+                    "$ref": "#/definitions/models.BlogAuthor"
+                },
+                "category": {
+                    "$ref": "#/definitions/models.BlogCategory"
+                },
+                "coverImage": {
+                    "type": "string"
+                },
+                "excerpt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "publishedAt": {
+                    "type": "string"
+                },
+                "slug": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.BlogPostResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/models.BlogPostDetail"
+                }
+            }
+        },
+        "models.BlogPostsResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.BlogPostListItem"
+                    }
+                },
+                "meta": {
+                    "$ref": "#/definitions/models.PaginationMeta"
+                }
+            }
+        },
+        "models.BlogSEO": {
+            "type": "object",
+            "properties": {
+                "metaDescription": {
+                    "type": "string"
+                },
+                "metaTitle": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.BlogTag": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "slug": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Loader": {
             "type": "object",
             "properties": {
@@ -275,14 +560,23 @@
                     "type": "integer"
                 }
             }
-        }
-    },
-    "securityDefinitions": {
-        "BearerAuth": {
-            "description": "Введите JWT токен",
-            "type": "apiKey",
-            "name": "Authorization",
-            "in": "header"
+        },
+        "models.PaginationMeta": {
+            "type": "object",
+            "properties": {
+                "page": {
+                    "type": "integer"
+                },
+                "perPage": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
+                },
+                "totalPages": {
+                    "type": "integer"
+                }
+            }
         }
     }
 }
